--- a/_posts/2018-7-21-tcp-1.md
+++ b/_posts/2018-7-21-tcp-1.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "TCP 连接管理"
-subtitle:   ""
+subtitle:   "三次握手和四次挥手"
 date:       2018-7-21
 author:     "ZingLix"
 header-img: "img/post-7.png"
