--- a/_posts/2018-7-22-tcp-2.md
+++ b/_posts/2018-7-22-tcp-2.md
@@ -4,7 +4,7 @@ title:      "TCP 报文结构"
 subtitle:   ""
 date:       2018-7-22
 author:     "ZingLix"
-header-img: "img/post-7.png"
+header-img: "img/post-12.png"
 catalog: true
 tags:
     - 网络
@@ -18,15 +18,17 @@ TCP 数据报封装于 IP 数据报中。
 
 ![](/img/in-post/TCP/2-1.png)
 
+> 下列名称链接对应更详细的介绍
+
 - 源端口和目的端口（各 16 比特）：与 IP 协议头部中的源 IP 和目的 IP 构成四元组，唯一的标识了每个连接。
-- 序列号（32 比特）：TCP 协议中数据每一个字节都有其对应的编号，这个字段用于标识当前报文第一个字节的序列号。
-- 确认号（32 比特）：期望收到的下一个序列号。如已收到 600 号的数据，则该字段应设为 601。
+- [序列号](/2018/07/22/tcp-3/#tcp-%E7%9A%84%E6%95%B0%E6%8D%AE%E4%BC%A0%E8%BE%93)（32 比特）：TCP 协议中数据每一个字节都有其对应的编号，这个字段用于标识当前报文第一个字节的序列号。
+- [确认号](/2018/07/22/tcp-3/#tcp-%E7%9A%84%E6%95%B0%E6%8D%AE%E4%BC%A0%E8%BE%93)（32 比特）：期望收到的下一个序列号。如已收到 600 号的数据，则该字段应设为 601。
 - 头部长度（4 比特）：由于选项的存在，TCP 头部长度可变，所以用这一字段表示。头部长度以 **32 比特为一个单位**。
 - 保留未用（4 比特）：被保留不使用。
 - CWR（1 比特）：拥塞窗口减，使发送方降低发送速率。
 - ECE（1 比特）：ECN 回显。
 - URG（1 比特）：紧急。
-- ACK（1 比特）：确认，启用时确认号才有效。
+- [ACK](/2018/07/22/tcp-3/#tcp-%E7%9A%84%E6%95%B0%E6%8D%AE%E4%BC%A0%E8%BE%93)（1 比特）：确认，启用时确认号才有效。
 - PSH（1 比特）：推送，指明接收方应立即交给上层应用程序。
 - RST（1 比特）：连接重置。
 - [SYN](/2018/07/21/tcp-1/#%E8%BF%9E%E6%8E%A5%E5%BB%BA%E7%AB%8B)（1 比特）：用于初始化连接。
