--- a/_posts/2018-7-21-tcp-1.md
+++ b/_posts/2018-7-21-tcp-1.md
@@ -71,3 +71,13 @@ TIME_WAIT 状态又称 2MSL 等待状态，处于在接收到 FIN 后发送 ACK 
 在上图中有两处表明了同时打开和关闭的地方，虽然这种情况发送几率较小但 TCP 仍对此作了处理以保证只建立一条连接以及能正常关闭。
 
 当双方同时建立连接时，相比正常建立连接多了一个报文，此时双方都既是服务器又是客户端，双方都得回复一个 SYN + ACK。同时关闭与正常的关闭类似，只是传递的报文段是交叉的。
+
+## 连接重置
+
+一般而言当传输发生错误时，会使用一个重置报文（RST 设为 1）终止连接，下面是会用到重置报文的一些场景。
+
+- 连接端口不存在：端口不存在时连接被拒绝，TCP 协议用重置报文完成此工作。
+- 终止连接：用 FIN 可以安全关闭连接，但是有时不想再处理已发出数据的情况，例如错误的开始发送一个大型文件，可以用 RST 快速结束连接。
+- 半开连接的终止：当某一方意外，在没有告知对方的情况下关闭了连接，例如停电，这时当对方再次发送数据就可以返回 RST 使对方关闭连接。
+
+重置报文不会有应答，发送之后自己就会立即关闭连接。如果重置报文发生丢包，那么对方再次发送数据就会发送第二个情况再次返回 RST。如果重置报文始终丢包，会触发对方的重传机制，直到重传超时关闭连接。
