--- a/_posts/2018-7-22-tcp-2.md
+++ b/_posts/2018-7-22-tcp-2.md
@@ -31,10 +31,10 @@ TCP 数据报封装于 IP 数据报中。
 - URG（1 比特）：紧急。
 - [ACK](/2018/07/22/tcp-3/#tcp-%E7%9A%84%E6%95%B0%E6%8D%AE%E4%BC%A0%E8%BE%93)（1 比特）：确认，启用时确认号才有效。
 - PSH（1 比特）：推送，指明接收方应立即交给上层应用程序。
-- RST（1 比特）：连接重置。
+- [RST](/2018/07/21/tcp-1/#%E8%BF%9E%E6%8E%A5%E9%87%8D%E7%BD%AE)（1 比特）：连接重置。
 - [SYN](/2018/07/21/tcp-1/#%E8%BF%9E%E6%8E%A5%E5%BB%BA%E7%AB%8B)（1 比特）：用于初始化连接。
 - [FIN](/2018/07/21/tcp-1/#%E8%BF%9E%E6%8E%A5%E5%85%B3%E9%97%AD)（1 比特）：表明自己已结束发送数据，用于关闭连接。
-- 窗口大小（16 比特）：用于流量控制的一个字段。
+- [窗口大小](/2018/07/23/tcp-4/)（16 比特）：用于流量控制的一个字段。
 - 校验和（16 比特）：用于保证传输数据的可靠性。
-- 紧急指针（16 比特）：紧急模式下启用。
+- 紧急指针（16 比特）：紧急模式下启用，此时传输的数据具有高优先级，指针标明紧急数据尾部。
 - 选项（可变）：用于实现其他一些功能。
