--- a/_posts/2018-7-22-tcp-2.md
+++ b/_posts/2018-7-22-tcp-2.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "TCP 报文结构"
+title:      "TCP 概述及报文结构"
 subtitle:   ""
 date:       2018-7-22
 author:     "ZingLix"
@@ -11,11 +11,19 @@ tags:
     - TCP
 ---
 
-TCP 数据报封装于 IP 数据报中。
+TCP 数据报封装于 IP 数据报中，在 IP 的不可靠尽力而为的服务上创建了 **可靠数据传输服务**。
 
 ![](/img/in-post/TCP/2-2.png)
 
-一般情况下 TCP 头部占用 20 字节，但有选项的情况下可能有 60 字节，结构如下。
+TCP 有自己的 [连接管理机制](/2018/07/21/tcp-1/)，基于 [确认重传](/2018/07/22/tcp-3/) 实现了数据传输的可靠性。在此基础上加上了 [流量控制](/2018/07/23/tcp-4/) 保证接收方成功接收和 [拥塞控制](/2018/07/24/tcp-5/) 避免网络阻塞，这些构成了 TCP 协议的核心。
+
+> 流量控制和拥塞控制都涉及到了窗口这一概念，都是为了降低传输的速度，但处理的是不同的场景。 
+> 
+> 流量控制主要是滑动窗口，为了解决接收方因缓存等原因传输失败。拥塞控制以慢启动和拥塞避免为核心，解决因网络拥塞导致的丢包而传输失败。
+
+## 报文结构
+
+一般情况下 TCP 头部占用 20 字节，但有选项的情况下可能有 60 字节，体现了 TCP 协议中的所有思想，结构如下。
 
 ![](/img/in-post/TCP/2-1.png)
 
@@ -26,7 +34,7 @@ TCP 数据报封装于 IP 数据报中。
 - [确认号](/2018/07/22/tcp-3/#tcp-%E7%9A%84%E6%95%B0%E6%8D%AE%E4%BC%A0%E8%BE%93)（32 比特）：期望收到的下一个序列号。如已收到 600 号的数据，则该字段应设为 601。
 - 头部长度（4 比特）：由于选项的存在，TCP 头部长度可变，所以用这一字段表示。头部长度以 **32 比特为一个单位**。
 - 保留未用（4 比特）：被保留不使用。
-- CWR（1 比特）：拥塞窗口减，使发送方降低发送速率。
+- [CWR](/2018/07/24/tcp-5/)（1 比特）：拥塞窗口减，使发送方降低发送速率。
 - ECE（1 比特）：ECN 回显。
 - URG（1 比特）：紧急。
 - [ACK](/2018/07/22/tcp-3/#tcp-%E7%9A%84%E6%95%B0%E6%8D%AE%E4%BC%A0%E8%BE%93)（1 比特）：确认，启用时确认号才有效。
