--- a/_posts/2018-6-16-maxflow.md
+++ b/_posts/2018-6-16-maxflow.md
@@ -4,7 +4,7 @@ title:      "最大流问题"
 subtitle:   "Maxflow Problem"
 date:       2018-6-16
 author:     "ZingLix"
-header-img: "img/post-md.jpg"
+header-img: "img/post-16.jpg"
 catalog: true
 tags:
     - 图
