--- a/_posts/2018-7-25-udp.md
+++ b/_posts/2018-7-25-udp.md
@@ -4,11 +4,10 @@ title:      "UDP 特点及报文结构"
 subtitle:   ""
 date:       2018-7-25
 author:     "ZingLix"
-header-img: "img/post-15.png"
+header-img: "img/post-15.jpg"
 catalog: true
 tags:
     - 网络
-    - TCP
 ---
 
 在运输层中，最为重要的两个协议就是 TCP 和 UDP。相对于 TCP 巨细无遗的处理了各种情况，UDP 只提供了最小的功能，几乎就是在直接使用 IP 协议。UDP 面向报文，只负责将报文传输给对方，不做任何拆分或拼接处理。
