--- a/_posts/2018-7-25-udp.md
+++ b/_posts/2018-7-25-udp.md
@@ -4,7 +4,7 @@ title:      "UDP 特点及报文结构"
 subtitle:   ""
 date:       2018-7-25
 author:     "ZingLix"
-header-img: "img/post-15.jpg"
+header-img: "img/post-15.png"
 catalog: true
 tags:
     - 网络
