--- a/_posts/2018-9-15-ICMP.md
+++ b/_posts/2018-9-15-ICMP.md
@@ -12,6 +12,8 @@ tags:
 
 ICMP 是用来给主机与路由器间沟通网络层信息的协议，用来弥补 IP 协议本身并未提供能诊断发送失败的功能这一缺陷，是网络层三个重要组件之一。
 
+最常见的用途是差错报告，例如在传输数据时在某一个结点发生了问题，此时该结点路由器就可以返回一个 ICMP 差错报文，发送方收到该报文时就可以针对该错误作出相应处理。
+
 ## 封装
 
 ICMP 报文封装于 IP 数据包中。
