csapp lab 2 part 2

--- a/_posts/2019-1-20-csapp-lab-2.md
+++ b/_posts/2019-1-20-csapp-lab-2.md
@@ -28,7 +28,7 @@ printf("That's number 2.  Keep going!\n");
 
 其提供的主程序源代码十分清晰，每次密码通过 `read_line()` 获取，在 `phase_x` 中判断是否正确，`phase_defused()` 拆除炸弹，之后输出一条拆除成功的信息。所以说逆向的目标就是找出 `phase_x` 中到底是如何判断的。
 
-## BOMB 1
+## Phase 1
 
 先通过反汇编观察 `phase_1` 的源代码。
 
@@ -80,7 +80,7 @@ Border relations with Canada have never been better.
 
 ![](/img/in-post/CSAPP-Lab/2-1.png)
 
-## BOMB 2
+## Phase 2
 
 反汇编 `phase_2`。
 
@@ -129,3 +129,350 @@ $1 = 0x4025c3 "%d %d %d %d %d %d"
 ```
 
 ![](/img/in-post/CSAPP-Lab/2-2.png)
+
+## Phase 3
+
+老规矩先反汇编 `phase_3`。
+
+```
+(gdb) disas phase_3
+Dump of assembler code for function phase_3:
+   0x0000000000400f43 <+0>:     sub    $0x18,%rsp
+   0x0000000000400f47 <+4>:     lea    0xc(%rsp),%rcx
+   0x0000000000400f4c <+9>:     lea    0x8(%rsp),%rdx
+   0x0000000000400f51 <+14>:    mov    $0x4025cf,%esi
+   0x0000000000400f56 <+19>:    mov    $0x0,%eax
+   0x0000000000400f5b <+24>:    callq  0x400bf0 <__isoc99_sscanf@plt>
+   0x0000000000400f60 <+29>:    cmp    $0x1,%eax
+   0x0000000000400f63 <+32>:    jg     0x400f6a <phase_3+39>
+   0x0000000000400f65 <+34>:    callq  0x40143a <explode_bomb>
+   0x0000000000400f6a <+39>:    cmpl   $0x7,0x8(%rsp)
+   0x0000000000400f6f <+44>:    ja     0x400fad <phase_3+106>
+   0x0000000000400f71 <+46>:    mov    0x8(%rsp),%eax
+   0x0000000000400f75 <+50>:    jmpq   *0x402470(,%rax,8)
+   0x0000000000400f7c <+57>:    mov    $0xcf,%eax
+   0x0000000000400f81 <+62>:    jmp    0x400fbe <phase_3+123>
+   0x0000000000400f83 <+64>:    mov    $0x2c3,%eax
+   0x0000000000400f88 <+69>:    jmp    0x400fbe <phase_3+123>
+   0x0000000000400f8a <+71>:    mov    $0x100,%eax
+   0x0000000000400f8f <+76>:    jmp    0x400fbe <phase_3+123>
+   0x0000000000400f91 <+78>:    mov    $0x185,%eax
+   0x0000000000400f96 <+83>:    jmp    0x400fbe <phase_3+123>
+   0x0000000000400f98 <+85>:    mov    $0xce,%eax
+   0x0000000000400f9d <+90>:    jmp    0x400fbe <phase_3+123>
+   0x0000000000400f9f <+92>:    mov    $0x2aa,%eax
+   0x0000000000400fa4 <+97>:    jmp    0x400fbe <phase_3+123>
+   0x0000000000400fa6 <+99>:    mov    $0x147,%eax
+   0x0000000000400fab <+104>:   jmp    0x400fbe <phase_3+123>
+   0x0000000000400fad <+106>:   callq  0x40143a <explode_bomb>
+   0x0000000000400fb2 <+111>:   mov    $0x0,%eax
+   0x0000000000400fb7 <+116>:   jmp    0x400fbe <phase_3+123>
+   0x0000000000400fb9 <+118>:   mov    $0x137,%eax
+   0x0000000000400fbe <+123>:   cmp    0xc(%rsp),%eax
+   0x0000000000400fc2 <+127>:   je     0x400fc9 <phase_3+134>
+   0x0000000000400fc4 <+129>:   callq  0x40143a <explode_bomb>
+   0x0000000000400fc9 <+134>:   add    $0x18,%rsp
+   0x0000000000400fcd <+138>:   retq
+End of assembler dump.
+```
+
+这一次中又调用了 `__isoc99_sscanf@plt`，格式化字符串存于 `$esi`（0x4025cf）中。
+
+```
+(gdb) p (char*)0x4025cf
+$1 = 0x4025cf "%d %d"
+```
+
+这就可以看出输入的应该是两个数字，两个分别存于 `0x8(%rsp)` 和 `0xc(%rsp)`。<+39> 要求第一个数字不大于 8。
+
+<+50> 是这段程序的核心，这句话可以等价看为 `jmp [0x402470 + 8 * %rax]`，其中 rax 即为第一个数字。以 2 为例，这句话会跳转至 0x402480 处的地址。
+
+```
+(gdb) x 0x402480
+0x402480:       0x00400f83
+```
+
+所以程序接下来会执行 0x400f83 处的程序，即 <+64>。之后会给 eax 一个值，此处为 0x2c3，与第二个数相比，所以答案为 `2 707`。
+
+根据第一个数的不同，所对应的数字也有所不同，因此有多个答案。
+
+```
+0 207
+1 311
+2 707
+3 256
+4 389
+5 206
+6 682
+7 327
+``` 
+
+![](/img/in-post/CSAPP-Lab/2-3.png)
+
+## Phase 4
+
+先观察 `phase_4`。
+
+```
+(gdb) disas phase_4
+Dump of assembler code for function phase_4:
+   0x000000000040100c <+0>:     sub    $0x18,%rsp
+   0x0000000000401010 <+4>:     lea    0xc(%rsp),%rcx
+   0x0000000000401015 <+9>:     lea    0x8(%rsp),%rdx
+   0x000000000040101a <+14>:    mov    $0x4025cf,%esi
+   0x000000000040101f <+19>:    mov    $0x0,%eax
+   0x0000000000401024 <+24>:    callq  0x400bf0 <__isoc99_sscanf@plt>
+   0x0000000000401029 <+29>:    cmp    $0x2,%eax
+   0x000000000040102c <+32>:    jne    0x401035 <phase_4+41>
+   0x000000000040102e <+34>:    cmpl   $0xe,0x8(%rsp)
+   0x0000000000401033 <+39>:    jbe    0x40103a <phase_4+46>
+   0x0000000000401035 <+41>:    callq  0x40143a <explode_bomb>
+   0x000000000040103a <+46>:    mov    $0xe,%edx
+   0x000000000040103f <+51>:    mov    $0x0,%esi
+   0x0000000000401044 <+56>:    mov    0x8(%rsp),%edi
+   0x0000000000401048 <+60>:    callq  0x400fce <func4>
+   0x000000000040104d <+65>:    test   %eax,%eax
+   0x000000000040104f <+67>:    jne    0x401058 <phase_4+76>
+   0x0000000000401051 <+69>:    cmpl   $0x0,0xc(%rsp)
+   0x0000000000401056 <+74>:    je     0x40105d <phase_4+81>
+   0x0000000000401058 <+76>:    callq  0x40143a <explode_bomb>
+   0x000000000040105d <+81>:    add    $0x18,%rsp
+   0x0000000000401061 <+85>:    retq
+End of assembler dump.
+```
+
+一样是输入两个数字，之后会调用 `func4`，返回之后判断 eax 是否为 0 以及输入的第二个数是否为 0，因此关键在于 `func4`。
+
+```
+(gdb) disas func4
+Dump of assembler code for function func4:
+   0x0000000000400fce <+0>:     sub    $0x8,%rsp
+   0x0000000000400fd2 <+4>:     mov    %edx,%eax
+   0x0000000000400fd4 <+6>:     sub    %esi,%eax
+   0x0000000000400fd6 <+8>:     mov    %eax,%ecx
+   0x0000000000400fd8 <+10>:    shr    $0x1f,%ecx
+   0x0000000000400fdb <+13>:    add    %ecx,%eax
+   0x0000000000400fdd <+15>:    sar    %eax
+   0x0000000000400fdf <+17>:    lea    (%rax,%rsi,1),%ecx
+   0x0000000000400fe2 <+20>:    cmp    %edi,%ecx
+   0x0000000000400fe4 <+22>:    jle    0x400ff2 <func4+36>
+   0x0000000000400fe6 <+24>:    lea    -0x1(%rcx),%edx
+   0x0000000000400fe9 <+27>:    callq  0x400fce <func4>
+   0x0000000000400fee <+32>:    add    %eax,%eax
+   0x0000000000400ff0 <+34>:    jmp    0x401007 <func4+57>
+   0x0000000000400ff2 <+36>:    mov    $0x0,%eax
+   0x0000000000400ff7 <+41>:    cmp    %edi,%ecx
+   0x0000000000400ff9 <+43>:    jge    0x401007 <func4+57>
+   0x0000000000400ffb <+45>:    lea    0x1(%rcx),%esi
+   0x0000000000400ffe <+48>:    callq  0x400fce <func4>
+   0x0000000000401003 <+53>:    lea    0x1(%rax,%rax,1),%eax
+   0x0000000000401007 <+57>:    add    $0x8,%rsp
+   0x000000000040100b <+61>:    retq
+End of assembler dump.
+```
+
+目标是能够让 eax 为 0，观察可以发现只有 <+36> 有这一作用，且它上一句为强制跳转，所以只有通过 jmp 才能抵达这句话，即要抵达 <+22>。
+
+利用单步调试可以发现这一句上面比较时 ecx 为 7，而 edi 是我们输入的第一个数字，因此第一个数小于等于 7。随后 <+41> 为了能够让函数顺利返回，就要求第一个数大于等于 7，因此这个数为 7。
+
+根据 `phase_4` 中又要第二个数字为 0，因此答案为
+
+```
+7 0
+```
+
+![](/img/in-post/CSAPP-Lab/2-4.png)
+
+## Phase 5
+
+```
+(gdb) disas phase_5
+Dump of assembler code for function phase_5:
+   0x0000000000401062 <+0>:     push   %rbx
+   0x0000000000401063 <+1>:     sub    $0x20,%rsp
+   0x0000000000401067 <+5>:     mov    %rdi,%rbx
+   0x000000000040106a <+8>:     mov    %fs:0x28,%rax
+   0x0000000000401073 <+17>:    mov    %rax,0x18(%rsp)
+   0x0000000000401078 <+22>:    xor    %eax,%eax
+   0x000000000040107a <+24>:    callq  0x40131b <string_length>
+   0x000000000040107f <+29>:    cmp    $0x6,%eax
+   0x0000000000401082 <+32>:    je     0x4010d2 <phase_5+112>
+   0x0000000000401084 <+34>:    callq  0x40143a <explode_bomb>
+   0x0000000000401089 <+39>:    jmp    0x4010d2 <phase_5+112>
+   0x000000000040108b <+41>:    movzbl (%rbx,%rax,1),%ecx
+   0x000000000040108f <+45>:    mov    %cl,(%rsp)
+   0x0000000000401092 <+48>:    mov    (%rsp),%rdx
+   0x0000000000401096 <+52>:    and    $0xf,%edx
+   0x0000000000401099 <+55>:    movzbl 0x4024b0(%rdx),%edx
+   0x00000000004010a0 <+62>:    mov    %dl,0x10(%rsp,%rax,1)
+   0x00000000004010a4 <+66>:    add    $0x1,%rax
+   0x00000000004010a8 <+70>:    cmp    $0x6,%rax
+   0x00000000004010ac <+74>:    jne    0x40108b <phase_5+41>
+   0x00000000004010ae <+76>:    movb   $0x0,0x16(%rsp)
+   0x00000000004010b3 <+81>:    mov    $0x40245e,%esi
+   0x00000000004010b8 <+86>:    lea    0x10(%rsp),%rdi
+   0x00000000004010bd <+91>:    callq  0x401338 <strings_not_equal>
+   0x00000000004010c2 <+96>:    test   %eax,%eax
+   0x00000000004010c4 <+98>:    je     0x4010d9 <phase_5+119>
+   0x00000000004010c6 <+100>:   callq  0x40143a <explode_bomb>
+   0x00000000004010cb <+105>:   nopl   0x0(%rax,%rax,1)
+   0x00000000004010d0 <+110>:   jmp    0x4010d9 <phase_5+119>
+   0x00000000004010d2 <+112>:   mov    $0x0,%eax
+   0x00000000004010d7 <+117>:   jmp    0x40108b <phase_5+41>
+   0x00000000004010d9 <+119>:   mov    0x18(%rsp),%rax
+   0x00000000004010de <+124>:   xor    %fs:0x28,%rax
+   0x00000000004010e7 <+133>:   je     0x4010ee <phase_5+140>
+   0x00000000004010e9 <+135>:   callq  0x400b30 <__stack_chk_fail@plt>
+   0x00000000004010ee <+140>:   add    $0x20,%rsp
+   0x00000000004010f2 <+144>:   pop    %rbx
+   0x00000000004010f3 <+145>:   retq
+End of assembler dump.
+```
+
+从 <+29> 可以看出这次输入的是一个字符串，且长度为 6。随后会将 eax 置为 0 开始一个关键循环（<+41> ~ <+74>）。
+
+首先必须确定的是 rbx 是输入的字符串地址。循环依次取出输入的每一个字符放入 ecx，取其低 4 位（<+45> ~ <+52>）放入 edx，之后取出 `0x4024b0(%rdx)`，放入 rsp + 0x10 + rax 的位置。循环六次后结束，将处理后的结果与 0x40108b 处的字符串相比。
+
+```
+(gdb) p (char*)(0x40245e)
+$5 = 0x40245e "flyers"
+(gdb) p (char*)(0x4024b0)
+$6 = 0x4024b0 <array> "maduiersnfotvbylSo you think you ......"
+```
+
+所以这个程序做的是将输入字符串每个字符的低 4 位作为 index 在上面第二个字符串 `maduiersnfotvbyl` 中进行映射，映射结果应该为 `flyers`。所以根据字符 ASCII 码后四位反推即可得到答案，答案不唯一。下面一列中有两个的说明两者皆可，当然只要满足条件不是字母也行，例如将 i 换成 ) 。
+
+```
+ionefg
+y  uvw
+```
+
+![](/img/in-post/CSAPP-Lab/2-5.png)
+
+## Phase 6
+
+```
+(gdb) disas phase_6
+Dump of assembler code for function phase_6:
+   0x00000000004010f4 <+0>:     push   %r14
+   0x00000000004010f6 <+2>:     push   %r13
+   0x00000000004010f8 <+4>:     push   %r12
+   0x00000000004010fa <+6>:     push   %rbp
+   0x00000000004010fb <+7>:     push   %rbx
+   0x00000000004010fc <+8>:     sub    $0x50,%rsp
+   0x0000000000401100 <+12>:    mov    %rsp,%r13
+   0x0000000000401103 <+15>:    mov    %rsp,%rsi
+   0x0000000000401106 <+18>:    callq  0x40145c <read_six_numbers>
+   0x000000000040110b <+23>:    mov    %rsp,%r14
+   0x000000000040110e <+26>:    mov    $0x0,%r12d
+   0x0000000000401114 <+32>:    mov    %r13,%rbp
+   0x0000000000401117 <+35>:    mov    0x0(%r13),%eax
+   0x000000000040111b <+39>:    sub    $0x1,%eax
+   0x000000000040111e <+42>:    cmp    $0x5,%eax
+   0x0000000000401121 <+45>:    jbe    0x401128 <phase_6+52>
+   0x0000000000401123 <+47>:    callq  0x40143a <explode_bomb>
+   0x0000000000401128 <+52>:    add    $0x1,%r12d
+   0x000000000040112c <+56>:    cmp    $0x6,%r12d
+   0x0000000000401130 <+60>:    je     0x401153 <phase_6+95>
+   0x0000000000401132 <+62>:    mov    %r12d,%ebx
+   0x0000000000401135 <+65>:    movslq %ebx,%rax
+   0x0000000000401138 <+68>:    mov    (%rsp,%rax,4),%eax
+   0x000000000040113b <+71>:    cmp    %eax,0x0(%rbp)
+   0x000000000040113e <+74>:    jne    0x401145 <phase_6+81>
+   0x0000000000401140 <+76>:    callq  0x40143a <explode_bomb>
+   0x0000000000401145 <+81>:    add    $0x1,%ebx
+   0x0000000000401148 <+84>:    cmp    $0x5,%ebx
+   0x000000000040114b <+87>:    jle    0x401135 <phase_6+65>
+   0x000000000040114d <+89>:    add    $0x4,%r13
+   0x0000000000401151 <+93>:    jmp    0x401114 <phase_6+32>
+   0x0000000000401153 <+95>:    lea    0x18(%rsp),%rsi
+   0x0000000000401158 <+100>:   mov    %r14,%rax
+   0x000000000040115b <+103>:   mov    $0x7,%ecx
+   0x0000000000401160 <+108>:   mov    %ecx,%edx
+   0x0000000000401162 <+110>:   sub    (%rax),%edx
+   0x0000000000401164 <+112>:   mov    %edx,(%rax)
+   0x0000000000401166 <+114>:   add    $0x4,%rax
+   0x000000000040116a <+118>:   cmp    %rsi,%rax
+   0x000000000040116d <+121>:   jne    0x401160 <phase_6+108>
+   0x000000000040116f <+123>:   mov    $0x0,%esi
+   0x0000000000401174 <+128>:   jmp    0x401197 <phase_6+163>
+   0x0000000000401176 <+130>:   mov    0x8(%rdx),%rdx
+   0x000000000040117a <+134>:   add    $0x1,%eax
+   0x000000000040117d <+137>:   cmp    %ecx,%eax
+   0x000000000040117f <+139>:   jne    0x401176 <phase_6+130>
+   0x0000000000401181 <+141>:   jmp    0x401188 <phase_6+148>
+   0x0000000000401183 <+143>:   mov    $0x6032d0,%edx
+   0x0000000000401188 <+148>:   mov    %rdx,0x20(%rsp,%rsi,2)
+   0x000000000040118d <+153>:   add    $0x4,%rsi
+   0x0000000000401191 <+157>:   cmp    $0x18,%rsi
+   0x0000000000401195 <+161>:   je     0x4011ab <phase_6+183>
+   0x0000000000401197 <+163>:   mov    (%rsp,%rsi,1),%ecx
+   0x000000000040119a <+166>:   cmp    $0x1,%ecx
+   0x000000000040119d <+169>:   jle    0x401183 <phase_6+143>
+   0x000000000040119f <+171>:   mov    $0x1,%eax
+   0x00000000004011a4 <+176>:   mov    $0x6032d0,%edx
+   0x00000000004011a9 <+181>:   jmp    0x401176 <phase_6+130>
+   0x00000000004011ab <+183>:   mov    0x20(%rsp),%rbx
+   0x00000000004011b0 <+188>:   lea    0x28(%rsp),%rax
+   0x00000000004011b5 <+193>:   lea    0x50(%rsp),%rsi
+   0x00000000004011ba <+198>:   mov    %rbx,%rcx
+   0x00000000004011bd <+201>:   mov    (%rax),%rdx
+   0x00000000004011c0 <+204>:   mov    %rdx,0x8(%rcx)
+   0x00000000004011c4 <+208>:   add    $0x8,%rax
+   0x00000000004011c8 <+212>:   cmp    %rsi,%rax
+   0x00000000004011cb <+215>:   je     0x4011d2 <phase_6+222>
+   0x00000000004011cd <+217>:   mov    %rdx,%rcx
+   0x00000000004011d0 <+220>:   jmp    0x4011bd <phase_6+201>
+   0x00000000004011d2 <+222>:   movq   $0x0,0x8(%rdx)
+   0x00000000004011da <+230>:   mov    $0x5,%ebp
+   0x00000000004011df <+235>:   mov    0x8(%rbx),%rax
+   0x00000000004011e3 <+239>:   mov    (%rax),%eax
+   0x00000000004011e5 <+241>:   cmp    %eax,(%rbx)
+   0x00000000004011e7 <+243>:   jge    0x4011ee <phase_6+250>
+   0x00000000004011e9 <+245>:   callq  0x40143a <explode_bomb>
+   0x00000000004011ee <+250>:   mov    0x8(%rbx),%rbx
+   0x00000000004011f2 <+254>:   sub    $0x1,%ebp
+   0x00000000004011f5 <+257>:   jne    0x4011df <phase_6+235>
+   0x00000000004011f7 <+259>:   add    $0x50,%rsp
+   0x00000000004011fb <+263>:   pop    %rbx
+   0x00000000004011fc <+264>:   pop    %rbp
+   0x00000000004011fd <+265>:   pop    %r12
+   0x00000000004011ff <+267>:   pop    %r13
+   0x0000000000401201 <+269>:   pop    %r14
+   0x0000000000401203 <+271>:   retq
+End of assembler dump.
+```
+
+这个真的有最后一题的风范。。。看着真的是头晕，简单来说输入了六个数字，<+23> 到 <+93> 检查了这六个数字是否都小于 7 且均不相等，<+95> 到 <+128> 让每个数字都被 7 减，之后得到一个数列。
+
+```
+(gdb) x/24xw 0x6032d0
+0x6032d0 <node1>:   0x0000014c    0x00000001    0x006032e0    0x00000000
+0x6032e0 <node2>:   0x000000a8    0x00000002    0x006032f0    0x00000000
+0x6032f0 <node3>:   0x0000039c    0x00000003    0x00603300    0x00000000
+0x603300 <node4>:   0x000002b3    0x00000004    0x00603310    0x00000000
+0x603310 <node5>:   0x000001dd    0x00000005    0x00603320    0x00000000
+0x603320 <node6>:   0x000001bb    0x00000006    0x00000000    0x00000000
+```
+
+之后代码中提到了 `0x6032d0` 这一地址，其中存放的是链表中的六个结点，结构大概如下。
+
+```
+struct node{
+    int num;
+    int order;
+    node *next;
+};
+```
+
+之前处理的数列就是这几个结点从大到小依次排列的序号列表，之后的程序会将其顺序进行调整然后检查。
+
+对于这个链表，从大到小依次是 3、4、5、6、1、2，但之前每个数字都要被 7 减，因此答案是
+
+```
+4 3 2 1 6 5
+```
+
+![](/img/in-post/CSAPP-Lab/2-6.png)
+
+拆弹完成！
