--- a/_posts/2019-1-23-csapp-lab-3.md
+++ b/_posts/2019-1-23-csapp-lab-3.md
@@ -10,6 +10,9 @@ tags:
   - CSAPP-LAB
 ---
 
+> Lab Version: 1/11/16
+> Cookie: 0x59b997fa
+
 ## 缓冲区溢出
 
 缓冲区溢出是指类似于 `scanf` 的函数，输入到一个字符数组中并不会检查溢出，所以用户输入的代码会影响到字符数组以外的内存空间，溢出的那部分可能就会产生一些意想不到的结果。这个实验就是展现缓冲区溢出的结果。
