add some related article

--- a/_posts/2018-7-21-tcp-1.md
+++ b/_posts/2018-7-21-tcp-1.md
@@ -81,3 +81,11 @@ TIME_WAIT 状态又称 2MSL 等待状态，处于在接收到 FIN 后发送 ACK 
 - 半开连接的终止：当某一方意外，在没有告知对方的情况下关闭了连接，例如停电，这时当对方再次发送数据就可以返回 RST 使对方关闭连接。
 
 重置报文不会有应答，发送之后自己就会立即关闭连接。如果重置报文发生丢包，那么对方再次发送数据就会发送第二个情况再次返回 RST。如果重置报文始终丢包，会触发对方的重传机制，直到重传超时关闭连接。
+
+## 相关文章
+
+- [TCP 报文结构](/2018/07/22/tcp-2)
+- [TCP 可靠传输：超时与重传](/2018/07/22/tcp-3)
+- [TCP 流量控制与滑动窗口](/2018/07/23/tcp-4)
+- [TCP 拥塞控制](/2018/07/24/tcp-5)
+- [更多网络相关文章](/archive/?tag=网络)
