--- a/_posts/2018-7-22-tcp-3.md
+++ b/_posts/2018-7-22-tcp-3.md
@@ -61,3 +61,11 @@ $$ RTO = max(srtt + max(G, 4*rttvar), 1000) $$
 在 TCP 中有一个 SACK 选项用于实现选择重传。在连续传输中，有时候也许第三个报文丢失，但之后的第四第五个报文都抵达了，这样利用 SACK 选项，发送方就可以只重传丢失的第三个报文而不必重发后面的数据报。
 
 SACK 选项指定 n 个块长度需要 8n+2 个字节，又由于 SACK 需要与 TSOPT 一同使用，需要额外 10 个字节，TCP 选项最多 40 字节，所以每次最多填补 3 个空缺。
+
+## 相关文章
+
+- [TCP 连接管理：三次握手与四次挥手](/2018/07/21/tcp-1)
+- [TCP 报文结构](/2018/07/22/tcp-2)
+- [TCP 流量控制与滑动窗口](/2018/07/23/tcp-4)
+- [TCP 拥塞控制](/2018/07/24/tcp-5)
+- [更多网络相关文章](/archive/?tag=网络)
