--- a/_posts/2018-7-22-tcp-2.md
+++ b/_posts/2018-7-22-tcp-2.md
@@ -46,3 +46,11 @@ TCP 有自己的 [连接管理机制](/2018/07/21/tcp-1/)，基于 [确认重传
 - 校验和（16 比特）：用于保证传输数据的可靠性。
 - 紧急指针（16 比特）：紧急模式下启用，此时传输的数据具有高优先级，指针标明紧急数据尾部。
 - 选项（可变）：用于实现其他一些功能。
+
+## 相关文章
+
+- [TCP 连接管理：三次握手与四次挥手](/2018/07/21/tcp-1)
+- [TCP 可靠传输：超时与重传](/2018/07/22/tcp-3)
+- [TCP 流量控制与滑动窗口](/2018/07/23/tcp-4)
+- [TCP 拥塞控制](/2018/07/24/tcp-5)
+- [更多网络相关文章](/archive/?tag=网络)
