add some descriptions

--- a/_posts/2020-4-18-WSL2-proxy.md
+++ b/_posts/2020-4-18-WSL2-proxy.md
@@ -94,6 +94,10 @@ alias proxy="source /path/to/proxy.sh"
 
 ## 防火墙设置
 
-如果前面完成后已经可以正常使用了，那么下面就不用管了。如果你代理已经设置正确了，但是依旧无法正常访问，代理的软件的确也没收到请求，那么很可能是被 Windows 的防火墙给拦截了。
+如果前面完成后已经可以正常使用了，那么下面就不用管了。如果你代理已经设置正确了，尤其是已经允许来自局域网的访问，但是依旧无法正常访问，代理的软件的确也没收到请求，那么很可能是被 Windows 的防火墙给拦截了。
 
-你可以尝试在 Windows 的防火墙里面允许代理软件访问专用网络，以及允许来自 `172.16.0.0/12` 的入站请求。
+![](/img/in-post/WSL/4.png)
+
+可以尝试在控制面板的防火墙面板左侧“允许应用或功能通过防火墙”，即上述界面中，打上勾允许代理软件通过防火墙。
+
+或者可以尝试在高级设置中，入站规则中新建一个相关规则，如果你不是很了解，可以允许任何程序的任何协议，远程 IP 为 `172.16.0.0/12` 及 `192.168.0.0/16` 的入站请求。
