--- a/_posts/2020-6-24-papernote-arxiv-2002-03794.md
+++ b/_posts/2020-6-24-papernote-arxiv-2002-03794.md
@@ -12,9 +12,10 @@ srclink: https://arxiv.org/abs/2002.03794
 tags:
   - 深度学习编译器
   - 深度学习编译器_pn
+  - 2020_pn
 ---
 
-> 我也处于学习阶段，文中出现任何错误或者对于论文内容想要进行探讨，可以在网页最下方找到我的联系方式
+> 文中出现任何错误或者对于论文内容想要进行探讨，可以在网页最下方找到我的联系方式，共同学习进步 :smirk:
 
 ## 背景
 
