--- a/_posts/2020-6-24-papernote-arxiv-2002-03794.md
+++ b/_posts/2020-6-24-papernote-arxiv-2002-03794.md
@@ -2,6 +2,7 @@
 layout: post
 title: "「论文笔记」The Deep Learning Compiler: A Comprehensive Survey"
 subtitle: "可能是第一篇关于深度学习编译器的综述"
+description: "可能是第一篇关于深度学习编译器的综述"
 date: 2020-6-24
 author: "ZingLix"
 header-img: "img/post-27.jpg"
