--- a/_posts/2020-4-18-WSL2-proxy.md
+++ b/_posts/2020-4-18-WSL2-proxy.md
@@ -22,16 +22,16 @@ WSL2 自己的 IP 可以用 `hostname -I | awk '{print $1}'` 得到。
 
 ## 设置代理
 
-有了宿主机 IP 之后，就可以通过设置环境变量的方式设置代理了。这里端口需要自己填写，而且别忘了代理软件允许来自局域网的连接。
+有了宿主机 IP 之后，就可以通过设置环境变量的方式设置代理了。这里端口需要自己填写，而且别忘了**代理软件中设置允许来自局域网的连接**。
 
-```
+```shell
 export http_proxy='http://<Windows IP>:<Port>'
 export https_proxy='http://<Windows IP>:<Port>'
 ```
 
 这种设置方式每次重启终端都得重新设置一遍，而且 IP 还得自己手打，还是挺麻烦的，这种时候就得靠脚本了！
 
-```
+```shell
 #!/bin/sh
 hostip=$(cat /etc/resolv.conf | grep nameserver | awk '{ print $2 }')
 wslip=$(hostname -I | awk '{print $1}')
@@ -81,20 +81,31 @@ else
 fi
 ```
 
-第三行记得换成自己的端口，`proxy.sh set` 就可以自动设置代理了。`unset` 可以取消代理，`test` 可以查看状态。
+**第 4 行 `<PORT>` 记得换成自己宿主机代理的端口！！！！！！**
 
-另外可以在 `~/.bashrc` 中选择性的加上下面两句话。
+之后运行 `. ./proxy.sh set` 就可以自动设置代理了。`unset` 可以取消代理，`test` 可以查看代理状态，能够用来检查环境变量是否被正确修改。
 
-```
+> 运行的时候不要忘记之前的 `.`，或者使用 `source ./proxy.sh set`，只有这样才能够修改环境变量
+>
+>
+> 直接运行例如 `./proxy.sh set` 或者 `sh proxy.sh set`，这样会是运行在一个子 shell 中，对当前 shell 没有效果
+
+另外可以在 `~/.bashrc` 中选择性的加上下面两句话，记得**将里面的路径修改成你放这个脚本的路径**。
+
+```shell
 alias proxy="source /path/to/proxy.sh"
 . /path/to/proxy.sh set
 ```
 
-将其中路径换成你的脚本路径，第一句话可以为这个脚本设置别名 `proxy`，这样在任何路径下都可以通过 `proxy` 命令使用这个脚本了。第二句话就是在启动的时候自动设置代理，这样以后不用额外操作就设置好代理啦~
+第一句话可以为这个脚本设置别名 `proxy`，这样在任何路径下都可以通过 `proxy` 命令使用这个脚本了，之后在任何路径下，都可以随时都可以通过输入 `proxy unset` 来暂时取消代理。
+
+第二句话就是在每次 shell 启动的时候运行该脚本实现自动设置代理，这样以后不用额外操作就默认设置好代理啦~
 
 ## 防火墙设置
 
 如果前面完成后已经可以正常使用了，那么下面就不用管了。如果你代理已经设置正确了，尤其是已经允许来自局域网的访问，但是依旧无法正常访问，代理的软件的确也没收到请求，那么很可能是被 Windows 的防火墙给拦截了。
+
+可以先尝试 ping 宿主机 ip 和 telnet 代理的端口，检查是否连通。如果无法连通，则多半是防火墙的问题。
 
 ![](/img/in-post/WSL/4.png)
 
