adjust code style

--- a/_posts/2017-7-27-BFS&DFS.md
+++ b/_posts/2017-7-27-BFS&DFS.md
@@ -40,7 +40,7 @@ tags:
 // 函数传进参数 s，表示结点编号
 
 void Graph::BFS(int s) {
-  // 步骤 1
+    // 步骤 1
     for (int i = 0; i < v; i++) {
         vertex[i].color = WHITE;
         vertex[i].pi = nullptr;
@@ -101,7 +101,7 @@ DFS-Visit 要求传进一个结点 u ，具体内容为：
 // 函数传进参数 i，表示结点编号
 
 void Graph::DFS() {
-       // 步骤 1
+    // 步骤 1
     for (int i = 0; i < v; i++) {
         vertex[i].color = WHITE;
         vertex[i].pi = nullptr;
@@ -144,15 +144,17 @@ void Graph::DFSVisit(int i) {
 
 
 void Graph::DFS_Simplified(int s) {
-    for (int i = 0; i < v; i++) visited[i] = 0;   // 初始化访问状态
+    for (int i = 0; i < v; i++) 
+        visited[i] = 0;   // 初始化访问状态
     DFSVisit_Simplified(s);
 }
 
 void Graph::DFSVisit_Simplified(int i) {
     visited[i] = 1;
     for (int j = 0; j < v; j++) {
-           // 如果与结点 i 相连的结点未被访问，则对其访问
-        if (graph[i][j] != 0 && visited[j] == 0) DFSVisit_Simplified(j);
+        // 如果与结点 i 相连的结点未被访问，则对其访问
+        if (graph[i][j] != 0 && visited[j] == 0) 
+            DFSVisit_Simplified(j);
     }
 }
 ```
