--- a/_posts/2020-4-18-WSL2-proxy.md
+++ b/_posts/2020-4-18-WSL2-proxy.md
@@ -31,6 +31,8 @@ export https_proxy='http://<Windows IP>:<Port>'
 
 这种设置方式每次重启终端都得重新设置一遍，而且 IP 还得自己手打，还是挺麻烦的，这种时候就得靠脚本了！
 
+**第 4 行 `<PORT>` 记得换成自己宿主机代理的端口！！！！！！**
+
 ```shell
 #!/bin/sh
 hostip=$(cat /etc/resolv.conf | grep nameserver | awk '{ print $2 }')
@@ -45,9 +47,6 @@ set_proxy(){
 
     export https_proxy="${PROXY_HTTP}"
     export HTTPS_proxy="${PROXY_HTTP}"
-
-    export ALL_PROXY="${PROXY_SOCKS5}"
-    export all_proxy=${PROXY_SOCKS5}
 }
 
 unset_proxy(){
@@ -55,8 +54,6 @@ unset_proxy(){
     unset HTTP_PROXY
     unset https_proxy
     unset HTTPS_PROXY
-    unset ALL_PROXY
-    unset all_proxy
 }
 
 test_setting(){
@@ -82,6 +79,18 @@ fi
 ```
 
 **第 4 行 `<PORT>` 记得换成自己宿主机代理的端口！！！！！！**
+
+如果希望 git 也能通过代理，可以分别在 `set_proxy` 和 `unset_proxy` 函数中加上如下命令
+
+```
+// 添加代理
+git config --global http.proxy "${PROXY_HTTP}"
+git config --global https.proxy "${PROXY_HTTP}"
+
+// 移除代理
+git config --global --unset http.proxy
+git config --global --unset https.proxy
+```
 
 之后运行 `. ./proxy.sh set` 就可以自动设置代理了。`unset` 可以取消代理，`test` 可以查看代理状态，能够用来检查环境变量是否被正确修改。
 
