--- a/_posts/wiki/2021-4-4-gpg.md
+++ b/_posts/wiki/2021-4-4-gpg.md
@@ -46,3 +46,16 @@ $ git config --global user.signingkey 3AA5C34371567BD2
 ```
 $ git config --global commit.gpgsign true
 ```
+
+备份及恢复
+
+```
+# 备份公钥
+gpg -o filename --export 3AA5C34371567BD2
+
+# 导出私钥
+gpg -o filename --export-secret-keys 3AA5C34371567BD2
+
+# 导入
+gpg --import filename
+```
