fix post count incorrect in index

--- a/_posts/papernote/2020-7-29-papernote-acl-2020-520.md
+++ b/_posts/papernote/2020-7-29-papernote-acl-2020-520.md
@@ -7,6 +7,7 @@ author: "ZingLix"
 header-img: "img/post-21.jpg"
 catalog: false
 papernote: true
+hidden: true
 src:  ACL 2020
 srclink: https://www.aclweb.org/anthology/2020.acl-main.520/
 srcquote: "Dai X, Karimi S, Hachey B, et al. An Effective Transition-based Model for Discontinuous NER[J]. arXiv preprint arXiv:2004.13454, 2020."
