--- a/_posts/papernote/2020-7-29-papernote-acl-2020-577.md
+++ b/_posts/papernote/2020-7-29-papernote-acl-2020-577.md
@@ -7,6 +7,7 @@ author: "ZingLix"
 header-img: "img/post-22.jpg"
 catalog: false
 papernote: true
+hidden: true
 src:  ACL 2020
 srclink: https://www.aclweb.org/anthology/2020.acl-main.577/
 srcquote: "Yu J, Bohnet B, Poesio M. Named Entity Recognition as Dependency Parsing[J]. arXiv preprint arXiv:2005.07150, 2020."
