update paper link

--- a/_posts/papernote/2020-7-29-papernote-acl-2020-577.md
+++ b/_posts/papernote/2020-7-29-papernote-acl-2020-577.md
@@ -9,7 +9,7 @@ catalog: false
 papernote: true
 hidden: true
 src:  ACL 2020
-srclink: https://www.aclweb.org/anthology/2020.acl-main.577/
+srclink: https://aclanthology.org/2020.acl-main.577/
 srcquote: "Yu J, Bohnet B, Poesio M. Named Entity Recognition as Dependency Parsing[J]. arXiv preprint arXiv:2005.07150, 2020."
 tags:
   - NER_pn
