--- a/_posts/papernote/2021-6-16-papernote-arxiv-2106-01223.md
+++ b/_posts/papernote/2021-6-16-papernote-arxiv-2106-01223.md
@@ -9,7 +9,7 @@ catalog: false
 papernote: true
 hidden: true
 src: ACL 2021
-srclink: https://arxiv.org/abs/2106.01223
+srclink: https://aclanthology.org/2021.acl-long.451/
 srcquote: "Yan H, Gui T, Dai J, et al. A Unified Generative Framework for Various NER Subtasks[J]. arXiv preprint arXiv:2106.01223, 2021."
 tags:
   - NER_pn
