--- a/_posts/papernote/2020-7-29-papernote-acl-2020-520.md
+++ b/_posts/papernote/2020-7-29-papernote-acl-2020-520.md
@@ -9,7 +9,7 @@ catalog: false
 papernote: true
 hidden: true
 src:  ACL 2020
-srclink: https://www.aclweb.org/anthology/2020.acl-main.520/
+srclink: https://aclanthology.org/2020.acl-main.520/
 srcquote: "Dai X, Karimi S, Hachey B, et al. An Effective Transition-based Model for Discontinuous NER[J]. arXiv preprint arXiv:2004.13454, 2020."
 tags:
   - NER_pn
